# ccpp-framework

./: .codee-format  run_codee_tmp.sh
.github/workflows/: capgen_unit_tests.yaml  fortran-formatting.yaml  prebuild.yaml  python.yaml
cmake/: ccpp_capgen.cmake
schema/: suite_v1_0.xsd
scripts/: ccpp_capgen.py  ccpp_datafile.py  constituents.py  framework_env.py  host_cap.py  metadata_parser.py  metadata_table.py  metavar.py  suite_objects.py  var_props.py
scripts/fortran_tools/: parse_fortran.py
scripts/parse_tools/: fortran_conditional.py  parse_checkers.py
src/: ccpp_constituent_prop_mod.F90  ccpp_hash_table.F90  ccpp_hashable.F90  ccpp_scheme_utils.F90  ccpp_types.F90
test/advection_test/: cld_ice.F90  cld_liq.F90  dlc_liq.F90  test_host.F90
test/capgen_test/: CMakeLists.txt  capgen_test_reports.py  temp_adjust.F90
test/capgen_test/adjust/: temp_kinds.F90
test/capgen_test/source_dir2/: temp_set.F90
test/unit_tests/: test_metadata_table.py  test_var_transforms.py
test/unit_tests/sample_scheme_files/: temp_adjust.F90
test_prebuild/test_chunked_data/: data.F90
